fixing nav overlay z-index

--- a/src/scss/layout/_navigation.scss
+++ b/src/scss/layout/_navigation.scss
@@ -60,7 +60,7 @@
   text-transform: uppercase;
   letter-spacing: 1px;
   position: relative;
-  z-index: 9000;
+  z-index: 200;
 
   li {
     display: block;
